fix cursor issue, support serial and big serial and update more coverage tests